# vibelympics

round_1/backend/: .dockerignore  Dockerfile  pyproject.toml
round_1/backend/src/: __init__.py  main.py
round_2/: .env.example  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  PROMPT.md  README.md  docker-compose.yml  index.html  make_sample_data.sh  package-lock.json  package.json  pyproject.toml  tessl.json  tsconfig.json  vite.config.ts
round_2/.tessl/tiles/tessl/npm-react/: tile.json
round_2/.tessl/tiles/tessl/npm-react/docs/: built-in-components.md  caching.md  children.md  components.md  composition.md  context.md  development.md  elements.md  experimental.md  hooks-context.md  hooks-effects.md  hooks-imperative.md  hooks-performance.md  hooks-state.md  hooks-transitions.md  index.md  refs.md  transitions.md
round_2/.tessl/tiles/tessl/pypi-boto3/: tile.json
round_2/.tessl/tiles/tessl/pypi-boto3/docs/: index.md  (+6 more)
round_2/.tessl/tiles/tessl/pypi-fastapi/: tile.json
round_2/backend-src/: __init__.py  config.py  database.py  main.py  s3.py  snap_store.py
round_2/frontend-src/: App.tsx  index.css
round_2/frontend-src/components/: Layout.tsx  SearchBox.tsx
round_2/frontend-src/pages/: HomePage.tsx  PackagePage.tsx  RevisionPage.tsx
round_2/sample_data/: bandwhich_sbom.json  bandwhich_vuln.json  firefox_sbom.json  firefox_vuln.json  ncspot_sbom.json  ncspot_vuln.json  null_sbom.json  null_vuln.json  spotify_sbom.json  spotify_vuln.json
round_2/worker-src/: __init__.py  config.py  database.py  main.py  s3.py  scanner.py  snap_store.py
(+31 files in other folders)
